cmake_minimum_required(VERSION 3.22)

project(AcwingRelated)

set(CMAKE_CXX_STANDARD 14)

include_directories(AcwingRelated)

add_executable(Acwing 2022Spring/week7/acwing1986.cpp)
add_executable(693 2022Summer/week4/acwing693.cpp)
add_executable(4268 2022Summer/week1/acwing4268.cpp)
add_executable(4269 2022Summer/week1/acwing4269.cpp)
add_executable(4273 2022Summer/week2/acwing4273.cpp)
add_executable(4274 2022Summer/week2/acwing4274.cpp)
add_executable(MT2 2022Summer/MTJ/OJ11/MT2.cpp)
add_executable(MT3 2022Summer/MTJ/OJ11/MT3.cpp)
add_executable(MT4 2022Summer/MTJ/OJ11/MT4.cpp)
add_executable(12MT1 2022Summer/MTJ/OJ12/MT1.cpp 2022Summer/MTJ/OJ13/MT1.cpp 2022Summer/MTJ/OJ13/MT2.cpp 2022Summer/MTJ/OJ13/MT3.cpp 2022Summer/MTJ/OJ13/MT4.cpp 2022Summer/MTJ/OJ13/MT5.cpp 2022Summer/MTJ/OJ14/MT1.cpp 2022Summer/MTJ/OJ14/MT2.cpp 2022Summer/MTJ/OJ14/MT3.cpp 2022Summer/MTJ/OJ14/MT4.cpp 2022Summer/MTJ/OJ14/MT5.cpp 2022Summer/MTJ/OJ14/MT6.cpp 2022Summer/MTJ/OJ15/MT1.cpp 2022Summer/MTJ/OJ15/MT2.cpp 2022Summer/MTJ/OJ15/MT3.cpp 2022Summer/MTJ/OJ15/MT4.cpp 2022Summer/MTJ/OJ15/MT6.cpp)
add_executable(12MT2 2022Summer/MTJ/OJ12/MT2.cpp)
add_executable(12MT3 2022Summer/MTJ/OJ12/MT3.cpp)
add_executable(12MT4 2022Summer/MTJ/OJ12/MT4.cpp)
add_executable(13MT3 2022Summer/MTJ/OJ13/MT3.cpp)
add_executable(13MT6 2022Summer/MTJ/OJ13/MT6.cpp)
add_executable(15MT5 2022Summer/MTJ/OJ15/MT5.cpp)
add_executable(chp1-3373 AcwingDSReExam/chapter1/acwing3373.cpp)